--- a/src/App.css
+++ b/src/App.css
@@ -24,12 +24,17 @@ h2 {
   color: #007BFF;
 }
 
+.button-group {
+  display: inline-flex;
+  justify-content: center;
+}
+
 .button {
   display: inline-block;
   background-color: #007BFF;
   color: white;
   padding: 10px 20px;
-  margin: 10px 40px 10px 0; /* 修改了这里，增加了按钮之间的间距 */
+  margin: 10px 40px 10px 0;
   border-radius: 5px;
   text-decoration: none;
   transition: background-color 0.3s ease;
