--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@ h2 {
 }
 
 .button-group {
-  display: inline-flex;
-  justify-content: center;
+  display: flex;
+  justify-content: space-between;
 }
 
 .button {
@@ -34,7 +34,7 @@ h2 {
   background-color: #007BFF;
   color: white;
   padding: 10px 20px;
-  margin: 10px 40px 10px 0;
+  margin: 10px 0;
   border-radius: 5px;
   text-decoration: none;
   transition: background-color 0.3s ease;
