--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,8 @@ h2 {
 
 .button-group {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 40px;
 }
 
 .button {
@@ -34,7 +35,6 @@ h2 {
   background-color: #007BFF;
   color: white;
   padding: 10px 20px;
-  margin: 10px 0;
   border-radius: 5px;
   text-decoration: none;
   transition: background-color 0.3s ease;
