--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,35 @@
 .App {
-  font-family: Arial, sans-serif;
-  padding: 20px;
   text-align: center;
-  background-color: #f4f4f4;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-h1 {
-  color: #333;
-  padding: 20px 0;
 }
 
 .project {
-  background-color: white;
-  padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-}
-
-h2 {
-  color: #007BFF;
+  margin: 20px;
 }
 
 .button-group {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
+  margin-top: 20px;
 }
 
 .button {
-  display: inline-block;
-  background-color: #007BFF;
+  margin: 10px;
+  padding: 10px;
+  background-color: #4CAF50;
+  border: none;
   color: white;
-  padding: 10px 20px;
-  border-radius: 5px;
+  text-align: center;
   text-decoration: none;
-  transition: background-color 0.3s ease;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.4s;
+  cursor: pointer;
 }
 
 .button:hover {
-  background-color: #0056b3;
+  background-color: #45a049;
+}
+
+.tutorial-options {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
