--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ h2 {
 }
 
 .button-group {
-  display:flex;
+  display: flex;
   justify-content: center;
   gap: 40px;
 }
@@ -42,4 +42,30 @@ h2 {
 
 .button:hover {
   background-color: #0056b3;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  flex-direction: column;
+}
+
+.dropdown-content .button {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
