--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  font-family: Arial, sans-serif;
+ font-family: Arial, sans-serif;
   padding: 20px;
   text-align: center;
   background-color: #f4f4f4;
@@ -52,7 +52,7 @@ h2 {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #007BFF;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -60,7 +60,7 @@ h2 {
 }
 
 .dropdown-content .button {
-  color: black;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
