--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  font-family: Arial, sans-serif;
+ font-family: Arial, sans-serif;
   padding: 20px;
   text-align: center;
   background-color: #f4f4f4;
@@ -59,13 +59,13 @@ h2 {
   flex-direction: column;
 }
 
-.dropdown-content.show {
-  display: block;
-}
-
 .dropdown-content .button {
   color: white;
   padding: 12px 16px;
   text-decoration: none;
+  display: block;
+}
+
+.dropdown:hover .dropdown-content {
   display: block;
 }
