--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,9 @@ h2 {
 .dropdown {
   position: relative;
   display: inline-block;
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
 .dropdown-content {
