--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,14 @@ h1 {
 
 h2 {
   color: #007BFF;
+  display: flex;
+  align-items: center;
+}
+
+.project-icon {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
 }
 
 .button-group {
@@ -56,22 +64,21 @@ h2 {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  flex-direction: column;
 }
 
 .dropdown-content.show {
-  display: block;
+    display:block
 }
 
 .dropdown-content .button {
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+    color:white
+    padding :12 px16 px
+    text-decoration :none
+    display :block
 }
 
 .small-text {
-  font-size: 12px;
-  color: #999;
-  margin-top: 10px;
+    font-size :12 px
+    color :#999
+    margin-top :10 px
 }
