--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ h1 {
   color: #666;
   font-style: italic;
   margin-bottom: 20px;
+  text-align: right; /* Right-align the quote */
 }
 
 .author {
