--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,7 @@ h1 {
   padding: 20px;
   margin-bottom: 40px;
   border-radius: 5px;
-  box-shadow: 0px 0px```css
-10px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
 
 h2 {
@@ -104,13 +103,15 @@ h2 {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  border: 1px dashed #666;
+  padding: 10px;
 }
 
 .category-line::before,
 .category-line::after {
   content: '';
   flex: 1;
-  border-bottom: 1px dashed #999;
+  border-bottom: 1px dashed #666;
 }
 
 .category-line::before {
@@ -121,6 +122,7 @@ h2 {
   margin-left: .5em;
 }
 
-.category-line span {
+.category-line h2 {
   white-space: nowrap;
+  font-size: 20px;
 }
