--- a/src/App.css
+++ b/src/App.css
@@ -99,12 +99,16 @@ h2 {
   }
 }
 
+.category {
+  border: 1px dashed #666;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
 .category-line {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-  border: 1px dashed #666;
-  padding: 10px;
 }
 
 .category-line::before,
