--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@ h1 {
   padding: 20px;
   margin-bottom: 40px;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px```css
+10px rgba(0,0,0,0.1);
 }
 
 h2 {
@@ -99,12 +100,6 @@ h2 {
   }
 }
 
-.category {
-  border: 1px dashed #666;
-  padding: 10px;
-  margin-bottom: 20px;
-}
-
 .category-line {
   display: flex;
   align-items: center;
@@ -115,7 +110,7 @@ h2 {
 .category-line::after {
   content: '';
   flex: 1;
-  border-bottom: 1px dashed #666;
+  border-bottom: 1px dashed #999;
 }
 
 .category-line::before {
@@ -126,7 +121,6 @@ h2 {
   margin-left: .5em;
 }
 
-.category-line h2 {
+.category-line span {
   white-space: nowrap;
-  font-size: 20px;
 }
