--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,7 @@ h1 {
   padding: 20px;
   margin-bottom: 40px;
   border-radius: 5px;
-  box-shadow: 0px 0px```css
-10px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
 
 h2 {
