--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ h2 {
 
 .button-group {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around; /* Change this line */
   align-items: flex-start; /* Align the buttons and the small text to the top */
   max-width: 300px; /* Adjust this value to control the space between the buttons */
   margin: 0 auto; /* This will center the button group */
@@ -109,7 +109,7 @@ h2 {
 .category-line::after {
   content: '';
   flex: 1;
-  border-bottom: 1px dashed #999;
+  border-bottom: 1px dashed#999;
 }
 
 .category-line::before {
