--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ h2 {
 
 .button-group {
   display: flex;
-  justify-content: space-around; /* Change this line */
+  justify-content: flex-start;
   align-items: flex-start; /* Align the buttons and the small text to the top */
   max-width: 300px; /* Adjust this value to control the space between the buttons */
   margin: 0 auto; /* This will center the button group */
@@ -70,10 +70,11 @@ h2 {
   border-radius: 5px;
   text-decoration: none;
   transition: background-color 0.3s ease;
+  margin-right: 10px; /* Add right margin to the button */
 }
 
-.button:hover {
-  background-color: #0056b3;
+.button:last-child {
+  margin-right: 0; /* Remove right margin from the last button */
 }
 
 .small-text {
@@ -109,7 +110,7 @@ h2 {
 .category-line::after {
   content: '';
   flex: 1;
-  border-bottom: 1px dashed#999;
+  border-bottom: 1px dashed #999;
 }
 
 .category-line::before {
