--- a/src/App.css
+++ b/src/App.css
@@ -132,22 +132,22 @@ h2 {
   .ReactModal__Content {
     width: 72%;  /* 将宽度调整为原来的80% */
     height: 220px; /* 将高度调整为原来的80% */
-    font-size: 80%; /* 将字体大小调整为原来的80% */
+    font-size: 90%; 
   }
   .ReactModal__Content h2 {
-    font-size: 80%; /* 将标题字体大小调整为原来的80% */
+    font-size: 90%; 
   }
   .ReactModal__Content p {
-    font-size: 80%; /* 将段落字体大小调整为原来的80% */
+    font-size: 90%; 
   }
   .token-input {
-    font-size: 80%; /* 将输入框字体大小调整为原来的80% */
+    font-size: 90%; 
   }
   .small-text {
-    margin-left: 61.68%; /* Adjust this value for mobile devices */
+    margin-left: 61.68%; 
   }
   .small-text-chatgpt {
-    margin-left: 52.52%; /* Adjust this value for mobile devices */
+    margin-left: 52.52%; 
   }
 } /* 这是媒体查询的闭合大括号 */
 .category-line {
