--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@ h2 {
     margin-top: 25px;
 }
   .close-modal-button {
-  right: 25px;
+  margin-left: 50%;
 }
   .small-text {
     margin-left: 61.68%; /* Adjust this value for mobile devices */
