--- a/src/App.css
+++ b/src/App.css
@@ -136,6 +136,9 @@ h2 {
   .ReactModal__Content p {
     margin-top: 20px; /* 将段落字体大小调整为原来的80% */
   }
+  .close-modal-button {
+    right: 10px; /* 将右边距调整为原来的一半 */
+  }
   .token-input {
     margin-top: 25px;
 }
