--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,12 @@ h2 {
   cursor: pointer;
   font-size: 16px;
 }
+.editor-recommend .recommend-reason {
+  font-size: 18px; /* Adjust the font size */
+  color: #333; /* Set the text color */
+  margin-top: 20px; /* Add some space above the text */
+  text-align: center; /* Center the text */
+}
 .ReactModal__Content {
   position: relative;
   top: 50%;
