--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,12 @@ h1 {
   color: #333;
   padding: 20px 0px;
 }
+.intro-text {
+  font-size: 16px;  // 调整字体大小
+  color: #999;  // 调整字体颜色
+  font-style: normal;  // 设置字体样式为正常，不斜体
+  text-align: center;  // 文字居中对齐
+}
 .quote-container {
   display: flex;
   flex-direction: column;
