--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,12 @@ h1 {
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
+.project p:last-child {
+  text-align: left; /* Align the text to the left */
+  color: #999; /* Make the text color lighter */
+  font-size: 12px; /* Decrease the font size */
+  margin-top: 20px; /* Add some top margin */
+}
 h2 {
   color: #007BFF;
   display: flex;
