--- a/src/App.css
+++ b/src/App.css
@@ -43,12 +43,14 @@ h1 {
   margin-bottom: 40px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  position: relative;
 }
-.project p:last-child {
-  text-align: left; /* Align the text to the left */
+.project-note {
+  position: absolute; /* Add this line */
+  left: 20px; /* Adjust this value to move the text to the left side */
+  bottom: 10px; /* Adjust this value to move the text to the bottom side */
   color: #999; /* Make the text color lighter */
   font-size: 12px; /* Decrease the font size */
-  margin-top: 20px; /* Add some top margin */
 }
 h2 {
   color: #007BFF;
