--- a/src/App.css
+++ b/src/App.css
@@ -233,7 +233,7 @@ h2 {
 /* Media query formobile devices */
 @media (max-width: 768px) {
   .project-note {
-  top: 10px
+  top: 10px;
   bottom: 0px; /* Adjust this value to move the text to the bottom side */
 }
   .ReactModal__Content {
