--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,10 @@ h2 {
   cursor: pointer;
   font-size: 16px;
 }
+.button.disabled {
+  background-color: #888;
+  cursor: not-allowed;
+}
 .chatgpt-buttons {
   justify-content: space-between;
   max-width: 450px;
