--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ h2 {
   max-width: 450px;
 }
 .user-favorite {
-  background-color: #ffd1dc; /* 淡粉色背景 */
+  background-color: #ffe5ee; /* 淡粉色背景 */
   padding: 30px; /* Increased padding */
   margin-bottom: 50px; /* Increased margin */
   border-radius: 10px; /* Increased border radius */
